about page start

--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -69,18 +69,20 @@ header .header-top .left a:hover {
 }
 
 .search-form {
-    width: 500px;
+    width: 700px;
     position: relative;
 }
 
 .header-mediel .search {
     position: relative;
-    width: 500px;
+    width: 700px;
 }
 
 .header-mediel .search-form input {
-    width: 500px;
+    width: 700px;
+    max-width: 700px;
     border-radius: 7px;
+    padding: 16px;
 }
 
 .header-mediel .search-form input::placeholder {
@@ -111,7 +113,7 @@ header .header-top .left a:hover {
 /* search dropdown */
 .search-form .search-dropdown {
     position: absolute;
-    top: 45px;
+    top: 52px;
     left: -0px;
     width: 100%;
     max-height: 400px;
@@ -660,6 +662,10 @@ header .header-top .left a:hover {
 .my-modal.shopping-cart .header,
 .my-modal.shopping-cart .footer {
     padding: 16px 14px;
+}
+
+.my-modal.shopping-cart .modal-content {
+    padding-top: 0px !important;
 }
 
 .my-modal.shopping-cart .footer {
