--- a/Static/Css/pages/other-page.css
+++ b/Static/Css/pages/other-page.css
@@ -22,6 +22,9 @@
 }
 
 
+
+
+/* Map Section */
 .map {
     width: 100%;
     height: 500px;
@@ -29,7 +32,54 @@
     border: 1px solid var(--border-color);
 }
 
+.management .my-card {
+    width: 100%;
+    max-width: 350px;
+    /* Adjust as needed */
+    height: 450px;
+    /* Set card height */
+    perspective: 1000px;
+    margin: auto;
+}
 
+.management .card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease;
+}
+
+.management .my-card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.card-front {
+    background: #f4f4f4;
+}
+
+.card-back {
+    background: #1a1a1a;
+    color: #fff;
+    transform: rotateY(180deg);
+    padding: 20px;
+    text-align: center;
+}
 
 @media(max-width:991px) {
     .contact-area {
