--- a/Static/Css/pages/other-page.css
+++ b/Static/Css/pages/other-page.css
@@ -32,6 +32,80 @@
     border: 1px solid var(--border-color);
 }
 
+
+
+/* our-achivment */
+.our-achivment {
+    background-color: var(--white-off);
+    padding: 24px 0;
+}
+
+.our-achivment .items {
+    margin: 0 auto;
+    width: 100%;
+}
+
+.our-achivment .item {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.our-achivment .item .my-card {
+    border: none;
+}
+
+.our-achivment .item .my-card h4 {
+    font-size: var(--fs-md);
+}
+
+.our-achivment .my-card::after {
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
+    position: absolute;
+    border: 2px dashed gainsboro;
+    animation: rotate 5s linear infinite;
+    content: '';
+    position: absolute;
+    animation: rotate 5s linear infinite;
+    border-radius: 50%;
+    border: 4px solid var(--border-color2);
+    border-top: 4px dotted var(--border-color2);
+    border-bottom: 4px dotted var(--border-color2);
+    z-index: 1;
+}
+
+
+
+
+.our-achivment .item .my-card {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+
+
+
+
+
 .management .my-card {
     width: 100%;
     max-width: 350px;
@@ -39,7 +113,6 @@
     height: 450px;
     /* Set card height */
     perspective: 1000px;
-    margin: auto;
 }
 
 .management .card-inner {
@@ -73,6 +146,14 @@
     background: #f4f4f4;
 }
 
+.management .card-front img {
+    max-height: 300px;
+}
+
+.management .content {
+    margin-top: 16px;
+}
+
 .card-back {
     background: #1a1a1a;
     color: #fff;
@@ -86,5 +167,9 @@
         flex-direction: column;
         margin: 0 auto;
         align-items: center;
+    }
+
+    .management .my-card {
+        margin: 0 auto;
     }
 }
