--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -1428,6 +1428,11 @@ footer .footer-pages .footer-head::after {
         border-radius: 7px;
     }
 
+
+    .footelr-bottom-area {
+        align-items: flex-start;
+    }
+
 }
 
 
