--- a/Static/Css/pages/shop.css
+++ b/Static/Css/pages/shop.css
@@ -6,17 +6,14 @@
 
 .shop-details-area .left-sidebar {
     /* height: 100dvh;
-    background-color: red;
     position: sticky;
-    top: 0;
+    top: 0; */
     left: 0;
-    overflow-y: auto; */
+    overflow-y: auto;
+    padding-right: 12px;
 }
 
-.shop-details-area .right-informaiton {
-    height: 4444px;
-    background-color: orange;
-}
+
 
 .left-sidebar .my-card {
     background-color: var(--white);
@@ -36,10 +33,166 @@
 
 
 
+
+
+
+/*****  Scrollbar styles  ******/
+.my-has-scrollbar-sm::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+}
+
+.my-has-scrollbar-sm::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    background-color: transparent;
+}
+
+.my-has-scrollbar-sm:hover::-webkit-scrollbar-thumb {
+    background-color: var(--border-color2, gray);
+}
+
+/* Scrollbar track */
+.my-has-scrollbar-sm::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+
+
+
 .left-sidebar .my-card .dropdown {
     background-color: transparent;
 }
 
 .left-sidebar .my-card .dropdown li a {
     border-color: var(--border-color);
+}
+
+.range-slider {
+    height: 5px;
+    position: relative;
+    background-color: #e1e9f6;
+    border-radius: 2px;
+}
+
+.range-selected {
+    height: 100%;
+    left: 30%;
+    right: 30%;
+    position: absolute;
+    border-radius: 5px;
+    background-color: var(--primary-hover-color);
+}
+
+.range-input {
+    position: relative;
+}
+
+.range-input input {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    top: -7px;
+    background: none;
+    pointer-events: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: none;
+}
+
+.range-input input::-webkit-slider-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    pointer-events: auto;
+    margin-top: -6px;
+    -webkit-appearance: none;
+}
+
+.range-input input::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    pointer-events: auto;
+    -moz-appearance: none;
+}
+
+.range-price {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.range-price label {
+    margin-right: 5px;
+    color: var(--secondary-color);
+}
+
+.range-price input {
+    width: 70px;
+    text-align: center;
+    appearance: none;
+    border-color: var(--border-color2);
+}
+
+
+
+
+
+
+
+
+
+/*****  Right Information  ******/
+.right-informaiton .search {
+    width: 450px;
+}
+
+.right-informaiton .search input {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.right-informaiton .search .my-btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.right-informaiton select {
+    color: var(--gray);
+    padding: 10px;
+}
+
+.right-informaiton .grid-btn {
+    padding: 10px 14px;
+    border-radius: 4px;
+    border: 1px solid var(--border-color2);
+    font-size: var(--fs-md);
+}
+
+.right-informaiton .grid-btn.active {
+    background-color: var(--border-color2);
+    color: var(--secondary-color);
+}
+
+.right-informaiton .grid-btn:hover {
+    background-color: var(--border-color2);
+    color: var(--secondary-color);
+}
+
+
+/* grid-items */
+.grid-items .item {
+    display: none;
+}
+
+.grid-items .item.active {
+    display: grid;
 }
