--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -1961,8 +1961,9 @@ input[type="radio"]:checked::after {
     padding: 12px;
 }
 
-.pagination ul li a {
-    padding: 10px 14px;
+.pagination ul li {
+    height: 36px;
+    padding: 0 14px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1971,12 +1972,20 @@ input[type="radio"]:checked::after {
     font-weight: var(--fw-600);
 }
 
-.pagination ul li a:hover {
+.pagination ul li a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pagination ul li:hover {
     background-color: var(--primary-color);
     color: var(--white);
 }
 
-.pagination ul li a.active {
+.pagination ul li.active {
     background-color: var(--primary-color);
     color: var(--white);
 }
@@ -2017,10 +2026,18 @@ input[type="radio"]:checked::after {
         margin: 0 auto;
     }
 
+    .list-view-area {
+        width: 100%;
+        border: 1px solid var(--border-color);
+        padding: 6px;
+    }
+
     .list-view-table {
-        width: 600px;
+        width: 640px;
         margin: 0 auto;
     }
+
+
 }
 
 
@@ -2029,9 +2046,17 @@ input[type="radio"]:checked::after {
   ||     Responsive For 769px     ||
 \*________________________________*/
 @media (max-width:769px) {
+    .list-view-area {
+        width: 100%;
+    }
+
     .list-view-table {
-        width: 7000px;
-        margin: 0 auto;
+        width: 640px;
+    }
+
+
+    .list-view-table table {
+        width: 640px !important;
     }
 
 }
@@ -2042,7 +2067,11 @@ input[type="radio"]:checked::after {
 \*________________________________*/
 @media (max-width:480px) {
     .list-view-table {
-        width: 600px;
-        margin: 0 auto;
+        width: 320px;
+    }
+
+
+    .list-view-table table {
+        width: 640px !important;
     }
 }
