--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -2010,6 +2010,119 @@ input[type="radio"]:checked::after {
 
 
 
+
+/*__________________________________
+||      Image animation Start      ||
+___________________________________*/
+.images {
+    -webkit-animation: imageScrollAnimation 10s linear infinite;
+    animation: imageScrollAnimation 10s linear infinite;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    height: 600px;
+}
+
+@keyframes imageScrollAnimation {
+    0% {
+        top: 0
+    }
+
+    100% {
+        top: -550px
+    }
+
+    0% {
+        top: 0
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+/*________________________________*\
+  ||     Down arrow animation     ||
+\*________________________________*/
+/*
+        <div id="configurator"><div class="arrow-container"><i class="fas fa-chevron-down chevron"></i><i class="fas fa-chevron-down chevron"></i><i class="fas fa-chevron-down chevron"></i></div></div>
+*/
+#configurator .arrow-container {
+    position: relative;
+    width: 35px;
+    height: 50px;
+}
+
+#configurator .chevron {
+    position: absolute;
+    font-size: 2.5rem;
+    color: #5f6169;
+    opacity: 0;
+    transform: scale3d(.5, .5, .5);
+    -webkit-animation: move 3s ease-out infinite;
+    animation: move 3s ease-out infinite;
+}
+
+#configurator .chevron:first-child {
+    -webkit-animation: move 3s ease-out 1s infinite;
+    animation: move 3s ease-out 1s infinite;
+}
+
+#configurator .chevron:nth-child(2) {
+    -webkit-animation: move 3s ease-out 2s infinite;
+    animation: move 3s ease-out 2s infinite;
+}
+
+@-webkit-keyframes move {
+    25% {
+        opacity: 1;
+    }
+
+    33% {
+        opacity: 1;
+        transform: translateY(30px);
+    }
+
+    67% {
+        opacity: 1;
+        transform: translateY(40px);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(55px) scale3d(.5, .5, .5);
+    }
+}
+
+@keyframes move {
+    25% {
+        opacity: 1;
+    }
+
+    33% {
+        opacity: 1;
+        transform: translateY(30px);
+    }
+
+    67% {
+        opacity: 1;
+        transform: translateY(40px);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(55px) scale3d(.5, .5, .5);
+    }
+}
+
+
+
 /*________________________________*\
   ||     Responsive For 991px     ||
 \*________________________________*/
