--- a/Static/Css/custom_class.css
+++ b/Static/Css/custom_class.css
@@ -72,6 +72,11 @@ ul {
     list-style: none;
 }
 
+ul.disk {
+    list-style: disc;
+    padding-left: 24px;
+}
+
 a {
     text-decoration: none;
     display: inline-block;
@@ -602,14 +607,22 @@ tr {
 }
 
 .my-pl-1 {
-    padding-left: 5px;
+    padding-left: 4px;
 }
 
 .my-pl-2 {
-    padding-left: 10px;
+    padding-left: 8px;
+}
+
+.my-pl-3 {
+    padding-left: 12px;
 }
 
 .my-pl-4 {
+    padding-left: 16px;
+}
+
+.my-pl-5 {
     padding-left: 20px;
 }
 
@@ -618,11 +631,23 @@ tr {
 }
 
 .my-pr-1 {
-    padding-right: 5px;
+    padding-right: 4px;
 }
 
 .my-pr-2 {
-    padding-right: 10px;
+    padding-right: 8px;
+}
+
+.my-pr-3 {
+    padding-right: 12px;
+}
+
+.my-pr-4 {
+    padding-right: 16px;
+}
+
+.my-pr-5 {
+    padding-right: 20px;
 }
 
 
