home page responise update

--- a/Static/Css/component.css
+++ b/Static/Css/component.css
@@ -78,7 +78,7 @@
     left: 0;
     top: 30px !important;
     display: grid;
-    grid-template-columns: repeat(1fr, 4) !important;
+    grid-template-columns: repeat(4, 1fr) !important;
     z-index: 12 !important;
     border-radius: 25px;
     background-color: var(--white) !important;
@@ -229,7 +229,7 @@
     cursor: pointer;
     user-select: none;
     font-size: var(--fs-md);
-    padding: 13px 20px;
+    padding: 12px 20px;
     font-family: var(--font-inter);
     display: flex;
     align-items: center;
@@ -615,7 +615,7 @@ textarea::placeholder {
 
 .my-has-scrollbar:hover::-webkit-scrollbar,
 .my-has-scrollbar-sm:hover::-webkit-scrollbar {
-    background-color: var(gray);
+    background-color: var(--gray);
     border: 1px solid var(--border-color);
     border-radius: 2px;
 }
@@ -1004,13 +1004,16 @@ input[type="radio"]:checked::after {
 }
 
 
+/* section head */
 .section-head {
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .section-head p {
     position: relative;
     color: var(--gray);
+    font-size: var(--fs-sm);
     margin-top: -10px;
 }
 
@@ -1027,8 +1030,11 @@ input[type="radio"]:checked::after {
 
 
 
-
-
+.section-head h2 {
+    font-size: var(--fs-xxl);
+    font-weight: bold;
+    margin-bottom: 8px;
+}
 
 
 
@@ -1786,7 +1792,7 @@ input[type="radio"]:checked::after {
 }
 
 .list-view-area .status.cancel {
-    background-color: var(red);
+    background-color: var(--red);
     color: var(--white);
 }
 
