--- a/Static/Css/common.css
+++ b/Static/Css/common.css
@@ -16,7 +16,7 @@
 ***************************/
 header .header-top {
     background-color: var(--white-off);
-    padding: 6px 0;
+    padding: 4px 0;
 }
 
 header .header-top .my-container {
@@ -32,8 +32,8 @@ header .header-top .left a:hover {
 /* Header Top Right */
 .header-top .social a,
 .social a {
-    width: 32px;
-    height: 32px;
+    width: 30px;
+    height: 30px;
     padding: 4px;
     border: 1px solid var(--white);
     background-color: var(--white);
@@ -43,11 +43,13 @@ header .header-top .left a:hover {
     border-radius: 50%;
     font-size: var(--fs-md);
     color: var(--gray);
+    box-shadow: var(--shadow-2);
 }
 
 .header-top .social a i,
 .social a i {
     transition: .4s linear;
+    font-size: var(--fs-sm);
 }
 
 .header-top .social a:hover i,
@@ -69,20 +71,22 @@ header .header-top .left a:hover {
 }
 
 .search-form {
-    width: 700px;
+    width: 550px;
     position: relative;
 }
 
 .header-mediel .search {
     position: relative;
-    width: 700px;
+    width: 550px;
 }
 
+
+
 .header-mediel .search-form input {
-    width: 700px;
-    max-width: 700px;
-    border-radius: 7px;
-    padding: 16px;
+    width: 550px;
+    max-width: 550px;
+    border-radius: 12px;
+    padding: 13px;
 }
 
 .header-mediel .search-form input::placeholder {
@@ -98,8 +102,8 @@ header .header-top .left a:hover {
     background-color: var(--primary-color);
     height: 100%;
     color: var(--white);
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 7px;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
 }
 
 .header-mediel .search-form .search-icon:active {
@@ -215,10 +219,11 @@ header .header-top .left a:hover {
     align-items: center;
     cursor: pointer;
     transition: background .15s linear;
+    background-color: var(--white-off);
 }
 
 .header-mediel .right-icons li:hover {
-    background-color: var(--white-off);
+    background-color: var(--border-color2);
     outline: 2px solid var(--white-off);
 }
 
@@ -226,10 +231,11 @@ header .header-top .left a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .header-mediel .icon i {
-    font-size: calc(var(--fs-xl) + 3px);
+    font-size: calc(var(--fs-xl) - 1px);
     font-weight: var(--fw-500);
 }
 
@@ -324,8 +330,7 @@ header .header-top .left a:hover {
 
 .header-bottom .all-department .single-dept {
     cursor: pointer;
-    padding: 4px 0;
-    padding: 6px 16px;
+    padding: 6px 12px;
     border-radius: 2px;
 }
 
@@ -356,16 +361,19 @@ header .header-top .left a:hover {
     transform: translateX(-25px);
     transition: .2s linear;
     z-index: -1;
+    width: 280px;
 }
 
 .all-department .dropdown li {
     position: relative;
+    width: 280px;
 }
 
-.all-department .dropdown li a {
-    padding: 2px 0;
+.all-department .dropdown a {
     font-size: var(--fs-sm);
     font-weight: var(--fw-600);
+    width: 100%;
+    /* padding: 2px 4px; */
 }
 
 .all-department li i {
@@ -402,11 +410,13 @@ header .header-top .left a:hover {
 
 .all-department .dropdown li a:hover {
     color: var(--primary-color);
+    background-color: var(--white-off);
 }
 
 .all-department .dropdown .col li {
-    padding: 4px 14px;
+    padding: 6px 14px;
     font-size: 13px;
+    font-weight: 600;
 }
 
 .all-department .dropdown li i {
@@ -946,6 +956,9 @@ footer .footer-mediel .brand h4 {
 
 
 /*________  footer-pages ________*/
+.footer-pages-area .my-container {
+    padding-top: 4px;
+}
 
 footer .footer-pages-area::after {
     position: absolute;
@@ -1029,9 +1042,8 @@ footer .footer-pages .footer-head::after {
 
 
 .footer-pages .social li {
-    /* border: 1px solid var(--gray); */
-    width: 52px;
-    height: 52px;
+    width: 46px;
+    height: 46px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1039,8 +1051,8 @@ footer .footer-pages .footer-head::after {
 }
 
 .footer-pages .social a {
-    width: 48px;
-    height: 48px;
+    width: 42px;
+    height: 42px;
     border-radius: 50%;
     opacity: 1;
     background-color: var(--border-color) !important;
@@ -1054,7 +1066,7 @@ footer .footer-pages .footer-head::after {
 
 .footer-pages .social a i {
     color: var(--primary-color-hover);
-    font-size: calc(var(--fs-lg) + 3px);
+    font-size: calc(var(--fs-lg) + 0px);
     opacity: 1;
 }
 
@@ -1062,7 +1074,7 @@ footer .footer-pages .footer-head::after {
 
 /*_______  Footer Bottom  _______*/
 .footer-bottom .my-container {
-    padding: 14px 16px;
+    padding: 6px 16px;
 }
 
 .footer-bottom {
@@ -1152,21 +1164,8 @@ footer .footer-pages .footer-head::after {
     margin-top: 50px;
 }
 
-.section-head {
-    margin-bottom: 20px;
-}
 
-.section-head h2 {
-    font-size: 2rem;
-    color: #333;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
 
-.section-head p {
-    font-size: 1rem;
-    color: #555;
-}
 
 
 
@@ -1347,7 +1346,7 @@ footer .footer-pages .footer-head::after {
 
     .header-top-mobile .area {
         width: 100%;
-        max-width: 600px;
+        max-width: 680px;
         margin: 0 auto;
     }
 
